# testing_practice_starter_pack

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
CMakeModules/: ClangTools.cmake  CodeCoverage.cmake
Docker/: Dockerfile  docker-compose.yml
src/: CMakeLists.txt  example.h  main.cpp
test/: CMakeLists.txt  DownloadProject.CMakeLists.cmake.in  tst_example.cpp
